# cddp-cpp

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MSIPDDP_Terminal_Constraints_Implementation.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/: setting.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yaml  ci.yaml  pages.yml  publish.yml  python-dependency-guard.yaml  wheels.yml
cmake/: cddpConfig.cmake.in
docs/: cpp.md  index.md  install.md  python.md  python_portfolio.md  release.md
docs/stylesheets/: extra.css
examples/: CMakeLists.txt  acado_car.cpp  cddp_acrobot.cpp  cddp_bicycle.cpp  cddp_car.cpp  cddp_car_ipddp.cpp  cddp_cartpole.cpp  cddp_dubins_car.cpp  cddp_forklift_ipddp.cpp  cddp_hcw.cpp  cddp_lti_system.cpp  cddp_manipulator.cpp  cddp_neural_pendulum.cpp  cddp_pendulum.cpp  cddp_quadrotor.cpp  cddp_quadrotor_circle.cpp  cddp_quadrotor_figure_eight.cpp  cddp_quadrotor_figure_eight_horizontal.cpp  cddp_quadrotor_figure_eight_horizontal_safe.cpp  cddp_quadrotor_figure_eight_horizontal_safe_old.cpp  cddp_quadrotor_figure_eight_vertical.cpp  cddp_quadrotor_mpc.cpp  cddp_quadrotor_mpc_collision_avoidance.cpp  cddp_quadrotor_mpc_figure_eight.cpp  cddp_quadrotor_point.cpp  cddp_safe_dubins_car.cpp  cddp_spacecraft_linear_docking.cpp  cddp_spacecraft_linear_rpo.cpp  cddp_spacecraft_nonlinear_rpo.cpp  cddp_spacecraft_roe_rpo.cpp  cddp_spacecraft_rpo.cpp  cddp_spacecraft_rpo_fuel.cpp  cddp_spacecraft_rpo_mc.cpp  cddp_unicycle.cpp  cddp_unicycle_mpc.cpp  cddp_unicycle_safe.cpp  cddp_unicycle_safe_comparison.cpp  cddp_unicycle_safe_ipddp.cpp  cddp_unicycle_safe_ipddp_v2.cpp  cddp_unicycle_safe_ipddp_v3.cpp  (+20 more)
examples/data/: README.md  mpcc_racing_track.csv
examples/gp_dynamics/: generate_cartpole_gp_dataset.cpp  generate_pendulum_gp_dataset.cpp  train_gp_dynamical_system.cpp
examples/gp_dynamics/data/: cartpole_dataset.csv  pendulum_dataset.csv
examples/neural_dynamics/: prepare_pendulum.cpp  run_pendulum.cpp  save_example.cpp  train_pendulum.cpp  train_pendulum.ipynb
examples/neural_dynamics/data/: pendulum_dataset.csv
examples/neural_dynamics/neural_models/: pendulum_model.pt
include/cddp/: matplotlibcpp.hpp
include/cddp-cpp/: CDDP.hpp  animation.hpp  cddp.hpp  cddp_example_utils.hpp  matplotlibcpp.hpp  sdqp.hpp
python/: CMakeLists.txt
python/pycddp/: __init__.py
python/src/: bind_constraints.cpp  bind_dynamics.cpp  bind_objective.cpp  bind_options.cpp  bind_solver.cpp  main.cpp
python/tests/: test_all_dynamics.py  test_constraints.py  test_custom_dynamics.py  test_nonlinear_objective.py  test_options.py  test_pendulum.py  test_portfolio.py  test_solver_errors.py
security/: python-direct-deps-allowlist.txt
src/: CMakeLists.txt
src/cddp_core/: CDDPProblem.cpp  alddp_core.cpp  alddp_solver.cpp  altro_solver.cpp  asddp_core.cpp  asddp_solver.cpp  barrier.cpp  boxqp.cpp  cddp_context_utils.cpp  cddp_context_utils.hpp  cddp_core.cpp  cddp_log.cpp  cddp_solver_base.cpp  cddp_sub.cpp  clddp_core.cpp  clddp_solver.cpp  constraint.cpp  dynamical_system.cc  dynamical_system.cpp  gp_dynamical_system.cpp  helper.cpp  interior_point_utils.cpp  interior_point_utils.hpp  ipddp_core.cpp  ipddp_feasible_core.cpp  ipddp_solver.cpp  logddp_core.cpp  logddp_solver.cpp  msipddp_core.cpp  msipddp_solver.cpp  neural_dynamical_system.cpp  objective.cpp  parameterized_dynamical_system.cpp  parameterized_objective.cpp  qp_solver.cpp  torch_dynamical_system.cpp
src/dynamics_model/: acrobot.cpp  bicycle.cpp  car.cpp  cartpole.cpp  dreyfus_rocket.cpp  dubins_car.cpp  euler_attitude.cpp  forklift.cpp  lti_system.cpp  manipulator.cpp  mrp_attitude.cpp  pendulum.cc  pendulum.cpp  quadrotor.cpp  quadrotor_rate.cpp  quaternion_attitude.cpp  spacecraft_landing2d.cpp  spacecraft_linear.cpp  spacecraft_linear_6dof.cpp  spacecraft_linear_fuel.cpp  spacecraft_nonlinear.cpp  spacecraft_roe.cpp  spacecraft_twobody.cpp  unicycle.cpp  usv_3dof.cpp
src/sqp_core/: scp_ipopt.cpp  sqp.cpp  sqp_core.cpp
test/: CDDPProblemTests.cpp  CDDPProblemTests_Bicycle.cpp  CMakeLists.txt  DynamicalSystemTests.cpp  ObjectiveFunctionTests.cpp  cddp_test.cpp  test_eigen.cpp  test_gurobi.cc  test_matplotplusplus.cpp  test_osqp.cpp
test/dynamics_model/: test_pendulum.cc
tests/: CDDPProblemTests.cpp  CMakeLists.txt  DynamicalSystemTests.cpp  ObjectiveFunctionTests.cpp  package_smoke_test.cmake  test_animation.cpp  test_autodiff.cpp  test_casadi_solver.cpp  test_cddp.cpp  test_cddp_pendulum.cpp  test_hessian.cpp  test_ipddp_car.cpp  test_ipddp_pendulum.cpp  test_ipddp_quadrotor.cpp  test_matplot.cpp  test_msipddp_car.cpp  test_qp_solvers.cpp  test_sdqp.cpp  test_torch.cpp
tests/cddp_core/: test_alddp_solver.cpp  test_altro_solver.cpp  test_asddp_core.cpp  test_asddp_solver.cpp  test_boxqp.cpp  test_cddp_core.cpp  test_clddp_car.cpp  test_clddp_core.cpp  test_clddp_pendulum.cpp  test_clddp_solver.cpp  test_clddp_unicycle.cpp  test_constraint.cpp  test_finite_difference.cpp  test_helper_conversions.cpp  test_ipddp_core.cpp  test_ipddp_solver.cpp  test_logcddp_core.cpp  test_logddp_solver.cpp  test_msipddp_core.cpp  test_msipddp_solver.cpp  test_objective.cpp  test_parameterized_objective.cpp  test_terminal_barrier.cpp
tests/dynamics_model/: test_acrobot.cpp  test_attitude_dynamics.cpp  test_bicycle.cpp  test_car.cpp  test_cartpole.cpp  test_dreyfus_rocket.cpp  test_dubins_car.cpp  test_forklift.cpp  test_lti_system.cpp  test_manipulator.cpp  test_mrp_attitude.cpp  test_neural_pendulum.cpp  test_pendulum.cpp  test_quadrotor.cpp  test_quadrotor_rate.cpp  test_spacecraft_landing2d.cpp  test_spacecraft_linear.cpp  test_spacecraft_linear_fuel.cpp  test_spacecraft_nonlinear.cpp  test_spacecraft_roe.cpp  test_torch_pendulum.cpp  test_unicycle.cpp  test_usv_3dof.cpp
tests/package_smoke/: CMakeLists.txt  main.cpp
tests/sqp_core/: test_scp_core.cpp  test_scp_ipopt.cpp  test_sqp.cpp  test_sqp_core.cpp
tools/: check_python_dependency_policy.py
(+67 files in other folders)
